--- a/assets/scss/framework/design/typography/elements/figure/--with-figcaption/figure--with-figcaption.scss
+++ b/assets/scss/framework/design/typography/elements/figure/--with-figcaption/figure--with-figcaption.scss
@@ -1,6 +1,6 @@
 @mixin figure--with-figcaption {
   .figcaption,
   figcaption {
-    display: block;
+    display: inline-block;
   }
 }
