--- a/assets/scss/framework/design/typography/elements/figure/__figcaption/figure__figcaption.scss
+++ b/assets/scss/framework/design/typography/elements/figure/__figcaption/figure__figcaption.scss
@@ -1,7 +1,8 @@
 @mixin figure__figcaption {
   @include text-style(figcaption);
+  display: inline-block;
   margin: $lem / 2 0;
-  padding: 0;
+  padding: $lem / 4 $lem / 2;
 
   .link,
   a {
